crates/ndc-graphql/tests/snapshots/query_builder__Query String@03_child_node_parameters.request.json.snap
---
source: crates/ndc-graphql/tests/query_builder.rs
expression: operation.query
input_file: crates/ndc-graphql/tests/config-3/queries/03_child_node_parameters.request.json
---
query($arg_1_limit: Int, $arg_2_where: Album_bool_exp, $arg_3_limit: Int) {
  __value: Album(limit: $arg_1_limit, where: $arg_2_where) {
    AlbumId
    Title
    Artist {
      ArtistId
      Name
    }
    Tracks(limit: $arg_3_limit) {
      TrackId
      Name
      UnitPrice
      MediaType {
        Name
        MediaTypeId
      }
    }
  }
}
